<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/heladofondo"
    tools:context=".Regist">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="54dp"
        android:layout_above="@+id/txtHelado"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="340dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/MenuPrincipal"
        android:minHeight="48dp"
        android:onClick="PInic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/back"
        tools:ignore="ImageContrastCheck,ImageContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/buttonCamera"
        android:layout_width="85dp"
        android:layout_height="69dp"
        android:layout_above="@+id/linearLayout"
        android:layout_below="@+id/iv1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="154dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="171dp"
        android:layout_marginBottom="18dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/simboloFoto"
        android:onClick="TomarFoto"
        app:srcCompat="@drawable/camera_nikon_photo_2512"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="355dp"
        android:layout_height="209dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="77dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/NomReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/nombreReg"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHint="#4A148C"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/ContReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/contraseñaReg"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHint="#4A148C" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:minHeight="48dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button

                android:id="@+id/ButtBuscar"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="116dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/purple_200"

                android:onClick="insertarProducto"
                android:text="@string/buttonAceptar"
                android:textColor="#4A148C"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="wrap_content"
        android:layout_height="313dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="71dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="82dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

</RelativeLayout>
