<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/heladofondo"
    tools:context=".MenuPrincipal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="-7dp"
        android:contentDescription="@string/Carrito">

        <ImageView
            android:id="@+id/iv1"
            android:layout_width="249dp"
            android:layout_height="268dp"
            android:layout_marginStart="82dp"
            android:layout_marginTop="84dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="56dp"
            android:contentDescription="@string/logo"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.794"
            app:srcCompat="@drawable/logo"
            tools:ignore="ImageContrastCheck,ImageContrastCheck" />

        <Button

            android:id="@+id/buttoncomprar"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="340dp"
            android:layout_height="57dp"
            android:layout_marginTop="64dp"
            android:layout_weight="1"


            android:backgroundTint="@color/purple_200"
            android:contentDescription="@string/Carrito"
            android:onClick="Comprar"
            android:text="@string/Carrito"
            android:textColor="#4A148C"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv1"
            tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

        <Button


            android:id="@+id/Bjuego"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="338dp"
            android:layout_height="64dp"
            android:layout_marginStart="32dp"


            android:layout_marginTop="52dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_200"
            android:onClick="play"
            android:text="@string/jug"
            android:textColor="#3E2723"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttoncomprar"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>